--- a/Cisco_SHOW_CLOCK_INT-ANSIBLE_V1.yml
+++ b/Cisco_SHOW_CLOCK_INT-ANSIBLE_V1.yml
@@ -4,7 +4,7 @@
   connection: local
  
   vars_prompt:
-  - name: "admin"
+  - name: "mgmt_username"
     prompt: "Username"
     private: no
   - name: "mgmt_password"
