--- a/Cisco_SHOW_CLOCK_INT-ANSIBLE_V1.yml
+++ b/Cisco_SHOW_CLOCK_INT-ANSIBLE_V1.yml
@@ -4,11 +4,8 @@
   connection: local
  
   vars_prompt:
-  - name: "mgmt_username"
-    prompt: "Username"
-    private: no
-  - name: "mgmt_password"
-    prompt: "Password"
+  - username: "admin"
+    password:"cisco"
 
   tasks:
 
@@ -16,8 +13,8 @@
     set_fact:
       provider:
         host: "{{ inventory_hostname }}" 
-        username: "{{ mgmt_username }}"
-        password: "{{ mgmt_password }}"
+        username: "{{ admin }}"
+        password: "{{ cisco }}"
 
   - name: IOS | Show clock
     ios_command:
