--- a/Cisco_SHOW_PORTS_MAC_ANSIBLE_V1.yml
+++ b/Cisco_SHOW_PORTS_MAC_ANSIBLE_V1.yml
@@ -5,8 +5,11 @@
   connection: local
  
   vars:
-  user="admin"
-  password="cisco"
+  password: "cisco"
+  user: "admin"
+  server: "{{ ansible_host }}"
+  validate_certs: no
+  server_port: 443
  
   
   tasks:
