--- a/Cisco_SHOW_PORTS_MAC_ANSIBLE_V1.yml
+++ b/Cisco_SHOW_PORTS_MAC_ANSIBLE_V1.yml
@@ -14,6 +14,6 @@
   
   tasks:
   - name: Save your show command to register
-     ios_command:
-      commands: 'show mac address-table dynamic'
-     register: output
+    ios_command:
+     commands: 'show mac address-table dynamic'
+     register: outpu
