--- a/Cisco_SHOW_PORTS_MAC_ANSIBLE_V1.yml
+++ b/Cisco_SHOW_PORTS_MAC_ANSIBLE_V1.yml
@@ -13,6 +13,7 @@
   
   tasks:
 - name: Save your show command to register
-          ios_command:
-            commands: 'show mac address-table dynamic'
-            provider: "{{ cli }}"
+         ios_command:
+           commands: 
+              - show mac address-table dynamic'
+           provider: "{{ cli }}"
