--- a/Cisco_SHOW_PORTS_MAC_ANSIBLE_V1.yml
+++ b/Cisco_SHOW_PORTS_MAC_ANSIBLE_V1.yml
@@ -12,7 +12,7 @@
  
   
   tasks:
-- name: Save your 
+- name: ios show commands 
   ios_command:
     commands: 
        -show mac address-table dynamic
